--- a/package.json
+++ b/package.json
@@ -26,20 +26,28 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/composition-api": "^0.26.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
-    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
+    "@vue/composition-api": "^1.1.0",
+    "autoprefixer": "^10.3.1",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.6",
+    "postcss-100vh-fix": "^1.0.2",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "tailwindcss": "^2.2.7"
   }
 }
