--- a/package.json
+++ b/package.json
@@ -5,34 +5,19 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "node .output/server/index.mjs",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
-    "prepare": "husky install",
-    "lint": "npm run lint:js && npm run lint:style"
-  },
-  "lint-staged": {
-    "*.{js,vue}": "eslint",
-    "*.{css,vue}": "stylelint"
+    "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.3",
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "autoprefixer": "^10.3.7",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/line-clamp": "^0.2.2",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
+    "autoprefixer": "^10.4.0",
     "nuxt3": "latest",
     "postcss": "^8.3.11",
     "postcss-100vh-fix": "^1.0.2",
     "postcss-import": "^14.0.2",
-    "prettier": "^2.4.1",
-    "stylelint": "^14.0.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^23.0.0",
-    "tailwindcss": "^2.2.19"
+    "sass": "^1.43.4",
+    "tailwindcss": "^3.0.0-alpha.2"
   }
 }
