--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.4.2",
+    "@heroicons/vue": "^1.0.5",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@vueuse/core": "^7.4.0",
     "autoprefixer": "^10.4.0",
     "nuxt3": "latest",
     "postcss": "^8.4.5",
