--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-100vh-fix": "^1.0.2",
     "postcss-import": "^14.0.2",
     "sass": "^1.45.1",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.7",
+    "vue-material-design-icons": "^5.0.0"
   }
 }
